# modelo_preditivo_churn

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
docs/: evidently_monitoring.md  jornada.md  ml_canvas.md  model_card.md  monitoring_plan.md
notebooks/: eda.ipynb
src/api/: app.py  predictor.py  schemas.py
src/data/: load.py  pipeline.py  preprocess.py  split.py
src/evaluation/: metrics.py
src/features/: engineering.py
src/models/: baselines.py  mlp.py
src/training/: train.py  train_baselines.py
src/utils/: config.py  logger.py  reproducibility.py
tests/: test_api.py  test_feature_parity.py  test_schema.py  test_smoke.py
